src/test/resources/fail/simple/A.scala
package fail.simple

class A {
  val b: B = null
}
